# eighty-eighty

./: README.md
components/eighty-eighty/: .gitignore  Cargo.toml
components/eighty-eighty/src/: bin.rs  cpu.rs  instruction.rs  lib.rs  tests.rs
components/web-client/: Cargo.toml  index.html
components/web-client/src/: cpu_state.rs  instruction.rs  main.rs
components/web-client/styles/: base.scss  cpu-state.scss  instruction.scss  style.scss
