[package]
name = "web-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "web-client"
path = "src/main.rs"

[dependencies]
yew = "0.19"
eighty-eighty = { path = "../eighty-eighty" }
log = "0.4.6"
wasm-logger = "0.2.0"
web-sys = {version= "0.3.56", features=["DragEvent", "DataTransfer"]}
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2.79"
js-sys = "0.3.56"